src/test/ui/resolve/resolve-inconsistent-names.stderr
error[E0408]: variable `a` is not bound in all patterns
  --> $DIR/resolve-inconsistent-names.rs:4:12
   |
LL |        a | b => {}
   |        -   ^ pattern doesn't bind `a`
   |        |
   |        variable not in all patterns

error[E0408]: variable `b` is not bound in all patterns
  --> $DIR/resolve-inconsistent-names.rs:4:8
   |
LL |        a | b => {}
   |        ^   - variable not in all patterns
   |        |
   |        pattern doesn't bind `b`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0408`.
